No loading container count calculation in ResourcesLimitUsageService